--- a/joinus.html
+++ b/joinus.html
@@ -31,6 +31,7 @@
                     <li><a href="./html/clinical/carrier.html">福孕安™</a></li>
                     <li><a href="./html/clinical/index.html">临床检测</a></li>
                     <li><a href="./html/research/index.html">科研服务</a></li>
+                    <li><a href="./software.html">遗传分析平台</a></li>
                     <li><a href="./about.html#anchor">联系我们</a></li>
                     <li><a href="./joinus.html">加入我们</a></li>
                 </ul>
