--- a/software.html
+++ b/software.html
@@ -33,7 +33,7 @@
                         <li><a href="./html/clinical/index.html">临床检测</a></li>
                         <li><a href="./html/research/index.html">科研服务</a></li>
                         <li><a href="./software.html">遗传分析平台</a></li>
-                        <li><a href="#anchor">联系我们</a></li>
+                        <li><a href="./about.html#anchor#anchor">联系我们</a></li>
                         <li><a href="./joinus.html">加入我们</a></li>
                     </ul>
                 </el-col>
@@ -49,7 +49,7 @@
                     <p>
                         <a style="color: #FFF;" href="">>Sentieon</a>&nbsp;&nbsp;&nbsp;&nbsp;
                         <a style="color: #FFF;" href="">>alamut</a>&nbsp;&nbsp;&nbsp;&nbsp;
-                        <a style="color: #FFF;" href="">>HGMD <sup>&reg;</sup> </a>
+                        <a style="color: #FFF;" href="">>HGMD<sup>&reg;</sup></a>
                     </p>
 
                 </div>
@@ -61,7 +61,7 @@
                     <div class="container">
                         <p>
                             从二代测序的数据分析到遗传变异的注释解读往往需要不同分析和解读工具的整合使用。更高效的工具和方法，能够带来更高质量的突变分析报告。采用主流遗传分析工具Sentieon,
-                            alamut和HGMD®组成遗传分析一体化解决方案，可全面覆盖从原始测序数据到分析报告的流程，能够快速精准地检测人类遗传变异，进行丰富的注释与灵活的筛选，进一步结合如IPA等海量文献检索和可视化工具进行临床意义解读和可视化探索，为研究人员提供强大高效的临床研究对策。
+                            alamut和HGMD<sup>&reg;</sup>组成遗传分析一体化解决方案，可全面覆盖从原始测序数据到分析报告的流程，能够快速精准地检测人类遗传变异，进行丰富的注释与灵活的筛选，进一步结合如IPA等海量文献检索和可视化工具进行临床意义解读和可视化探索，为研究人员提供强大高效的临床研究对策。
                         </p>
                         <div class="img" style="padding-top: 50px; max-width: 1000px; align-items: center;">
                             <el-row>
@@ -217,7 +217,7 @@
                 <div class="container" style="padding-top: 50px">
                     <h3 class="title">CLC Genomics Workbennch</h3>
                     <div class="container">
-                        <div class="img" style="padding-top: 20px">
+                        <div class="img" style="padding-top: 20px; max-width: 1000px;">
                             <img src="./assets/img/608.svg" />
                         </div>
                     </div>
