--- a/html/software/HGMD.html
+++ b/html/software/HGMD.html
@@ -61,19 +61,19 @@
                     </div>
                     <p style="padding: 40px 0">HGMD<sup>&reg;</sup>是最新整合了已知和已发表导致人类遗传疾病的病理性基因损伤的综合性数据库。HGMD<sup>&reg;</sup>为医学与临床遗传学家、生物信息学家、人类与分子遗传学研究者以及研究特定患者或家庭遗传状况的医师与遗传顾问提供了具有实际意义的重要信息，是广泛应用且值得信任的资源库，已被权威期刊中文献引用超过<span style="color:#568a37;">5000</span>次。</p>
                     <ul class="listhgmd">
-                        <li>可以为验证某个突变是否已被证实导致人类遗传疾病的重要循证医学
+                        <li><span style="color: black;">可以为验证某个突变是否已被证实导致人类遗传疾病的重要循证医学</span>
                         </li>
-                        <li>可以获得某个特定基因或疾病的致病突变图谱
-                        </li>
-                        <li>可以快速访问疾病相关的人类遗传突变的详细报告
-                        </li>
+                        <li><span style="color: black;">可以获得某个特定基因或疾病的致病突变图谱
+                        </span></li>
+                        <li><span style="color: black;">可以快速访问疾病相关的人类遗传突变的详细报告
+                        </span></li>
                     </ul>
                 </div>
             </div>
             <!-- section2 -->
             <div class="content-2 common-background">
                 <div class="container">
-                    <h3 class="titleleft">HGMD分类</h3>
+                    <h3 class="hgmdtitleleft">HGMD分类</h3>
                     <div class="img"><img src="../../assets/img/618.svg" >
                     </div>
                 </div>
