--- a/html/research/index.html
+++ b/html/research/index.html
@@ -30,6 +30,7 @@
                     <li><a href="../clinical/carrier.html">福孕安™</a></li>
                     <li><a href="../clinical/index.html">临床检测</a></li>
                     <li><a href="./index.html">科研服务</a></li>
+                    <li><a href="../../software.html">遗传分析平台</a></li>
                     <li><a href="../../about.html#anchor">联系我们</a></li>
                     <li><a href="../../joinus.html">加入我们</a></li>
                 </ul>
