--- a/html/software/HGMD.html
+++ b/html/software/HGMD.html
@@ -44,13 +44,20 @@
             <div class="banner background" style="background-image: url(../../assets/img/601.png);">
                 <div class="centre">
                     <p >遗传学科研与临床软件</p>
+                    <p>
+                        <span class="links">
+                        <a style="color: #FFF;" href="sentieon.html">>Sentieon</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a style="color: #FFF;" href="alamut.html">>alamut</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a style="color: #FFF;" href="HGMD.html">>HGMD<sup>&reg;</sup></a>
+                        </span>
+                    </p>
                 </div>
             </div>
             <!-- section1 -->
             <div class="content-1">
                 <div class="container">
                     <div class="imglogo"><img src="../../assets/img/617.svg" ></div>
-                    <h3 class="titlesentieon" style="color:#568a37 ;">全球最大遗传疾病突变数据库</h3>
+                    <h3 class="titlesoftware" style="color:#568a37 ;">全球最大遗传疾病突变数据库</h3>
                     <div class="texthgmd">
                         <p>260,000+</p> 
                         <p style="color: black;">逾26万详细突变报告</p>
@@ -73,7 +80,7 @@
             <!-- section2 -->
             <div class="content-2 common-background">
                 <div class="container">
-                    <h3 class="hgmdtitleleft">HGMD分类</h3>
+                    <h3 class="titlesoftware" style="color: black;">HGMD分类</h3>
                     <div class="img"><img src="../../assets/img/618.svg" >
                     </div>
                 </div>
