--- a/html/software/alamut.html
+++ b/html/software/alamut.html
@@ -44,13 +44,20 @@
             <div class="banner background" style="background-image: url(../../assets/img/601.png);">
                 <div class="centre">
                     <p >遗传学科研与临床软件</p>
+                    <p>
+                        <span class="links">
+                        <a style="color: #FFF;" href="sentieon.html">>Sentieon</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a style="color: #FFF;" href="alamut.html">>alamut</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a style="color: #FFF;" href="HGMD.html">>HGMD<sup>&reg;</sup></a>
+                        </span>
+                    </p>
                 </div>
             </div>
             <!-- section1 -->
             <div class="content-1">
                 <div class="container">
                     <div class="imglogo"><img src="../../assets/img/613.svg" ></div>
-                    <h3 class="titlesentieon" style="color:#373737 ;">一体化基因组变异分析解决方案</h3>
+                    <h3 class="titlesoftware" style="color:#373737 ;">一体化基因组变异分析解决方案</h3>
                     <div class="img"><img src="../../assets/img/615.svg" ></div>
                 </div>
             </div>
@@ -60,10 +67,10 @@
             <!-- section2 -->
             <div class="content-2">
                 <div class="container">
-                    <div class="img"><img src="../../assets/img/614.svg" >
+                    <div class="imgleft"><img src="../../assets/img/614.svg" >
                     </div>
                     <h3 class="titleleft">高级变异探索工具</h3>
-                    <p style="padding: 0 10%;">Alamut Visual 是一款综合性基因浏览器，帮助科学家评估病理状态下人类基因发生的变异。软件将多种来源的资源数据库和预测算法集合成为单一的可视化平台。
+                    <p>Alamut Visual 是一款综合性基因浏览器，帮助科学家评估病理状态下人类基因发生的变异。软件将多种来源的资源数据库和预测算法集合成为单一的可视化平台。
                         <br>
                         <br>
                         Alamut Visual 具有独有的特点，例如图形化剪接研究，能够帮助科学家在节省时间和提升效率的同时保证研究质量。</p>
