--- a/html/software/sentieon.html
+++ b/html/software/sentieon.html
@@ -44,13 +44,20 @@
             <div class="banner background" style="background-image: url(../../assets/img/601.png);">
                 <div class="centre">
                     <p >遗传学科研与临床软件</p>
+                    <p>
+                        <span class="links">
+                        <a style="color: #FFF;" href="sentieon.html">>Sentieon</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a style="color: #FFF;" href="alamut.html">>alamut</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a style="color: #FFF;" href="HGMD.html">>HGMD<sup>&reg;</sup></a>
+                        </span>
+                    </p>
                 </div>
             </div>
             <!-- section1 -->
             <div class="content-1 common-background">
                 <div class="container">
                     <div class="imglogo"><img src="../../assets/img/610.svg" ></div>
-                    <h3 class="titlesentieon">遗传测序数据快速二级分析软件</h3>
+                    <h3 class="titlesoftware">遗传测序数据快速二级分析软件</h3>
                     <el-row>
                         <el-col :span="12"><div class="grid-content">
                             <ul class="stlist">
