--- a/software.html
+++ b/software.html
@@ -44,54 +44,52 @@
             <div class="banner background" style="background-image: url(./assets/img/601.png);">
                 <div class="centre">
                     <p >遗传学科研与临床软件</p>
-                </div>
-                <div class="links">
                     <p>
-                        <a style="color: #FFF;" href="">>Sentieon</a>&nbsp;&nbsp;&nbsp;&nbsp;
-                        <a style="color: #FFF;" href="">>alamut</a>&nbsp;&nbsp;&nbsp;&nbsp;
-                        <a style="color: #FFF;" href="">>HGMD<sup>&reg;</sup></a>
+                        <span class="links">
+                        <a style="color: #FFF;" href="./html/software/sentieon.html">>Sentieon</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a style="color: #FFF;" href="./html/software/alamut.html">>alamut</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a style="color: #FFF;" href="./html/software/HGMD.html">>HGMD<sup>&reg;</sup></a>
+                        </span>
                     </p>
-
                 </div>
             </div>
             <!-- 一体化方案 -->
             <div class="content-1">
                 <div class="container">
                     <h3 class="title">遗传分析一体化解决方案</h3>
-                    <div class="container">
                         <p>
                             从二代测序的数据分析到遗传变异的注释解读往往需要不同分析和解读工具的整合使用。更高效的工具和方法，能够带来更高质量的突变分析报告。采用主流遗传分析工具Sentieon,
-                            alamut和HGMD<sup>&reg;</sup>组成遗传分析一体化解决方案，可全面覆盖从原始测序数据到分析报告的流程，能够快速精准地检测人类遗传变异，进行丰富的注释与灵活的筛选，进一步结合如IPA等海量文献检索和可视化工具进行临床意义解读和可视化探索，为研究人员提供强大高效的临床研究对策。
+                            alamut和HGMD&reg;组成遗传分析一体化解决方案，可全面覆盖从原始测序数据到分析报告的流程，能够快速精准地检测人类遗传变异，进行丰富的注释与灵活的筛选，进一步结合如IPA等海量文献检索和可视化工具进行临床意义解读和可视化探索，为研究人员提供强大高效的临床研究对策。
                         </p>
-                        <div class="img" style="padding-top: 50px; max-width: 1000px; align-items: center;">
+                        <div class="img">
                             <el-row>
                                 <el-col :span="6">
-                                    <div class="grid-content bg-purple">
-                                        <img src="./assets/img/602.svg" /></div>
+                                    <div class="grid-content">
+                                        <a href="./html/software/sentieon.html"><img src="./assets/img/602.svg" href="./html/software/sentieon.html"/></a></div>
                                 </el-col>
-                                <el-col :span="3">
-                                    <div class="grid-content bg-purple">
-                                        <img src="./assets/img/603.svg" width="50%" style="vertical-align: middle;" />
+                                <el-col :span="3" class="center-vertical">
+                                    <div class="grid-content">
+                                        <img src="./assets/img/603.svg" width="40%"/>
                                     </div>
                                 </el-col>
                                 <el-col :span="6">
-                                    <div class="grid-content bg-purple">
-                                        <img src="./assets/img/604.svg" /></div>
+                                    <div class="grid-content">
+                                        <a href="./html/software/alamut.html"><img src="./assets/img/604.svg" /></a></div>
                                 </el-col>
-                                <el-col :span="3">
-                                    <div class="grid-content bg-purple">
-                                        <img src="./assets/img/603.svg" width="50%" /></div>
+                                <el-col :span="3" class="center-vertical">
+                                    <div class="grid-content">
+                                        <img src="./assets/img/603.svg" width="40%"/>
+                                    </div>
                                 </el-col>
                                 <el-col :span="6">
-                                    <div class="grid-content bg-purple">
-                                        <img src="./assets/img/605.svg" /></div>
+                                    <div class="grid-content">
+                                        <a href="./html/software/HGMD.html"><img src="./assets/img/605.svg" /></a></div>
                                 </el-col>
                             </el-row>
                         </div>
                         <div class="img" style="padding-top: 50px">
                             <img src="./assets/img/606.svg" />
                         </div>
-                    </div>
                 </div>
             </div>
             <!-- 优势 -->
@@ -214,18 +212,18 @@
             </div>
             <!-- CLC & Ingenuity -->
             <div class="content-5">
-                <div class="container" style="padding-top: 50px">
+                <div class="container">
                     <h3 class="title">CLC Genomics Workbennch</h3>
                     <div class="container">
-                        <div class="img" style="padding-top: 20px; max-width: 1000px;">
+                        <div class="img">
                             <img src="./assets/img/608.svg" />
                         </div>
                     </div>
                 </div>
-                <div class="container" style="padding-top: 50px">
+                <div class="container">
                     <h3 class="title">Ingenuity Pathway Analysis</h3>
                     <div class="container">
-                        <div class="img" style="padding-top: 20px">
+                        <div class="img">
                             <img src="./assets/img/609.svg" />
                         </div>
                     </div>
