--- a/about.html
+++ b/about.html
@@ -73,8 +73,8 @@
             <h3 class="title">福君简介：</h3>
             <div class="describe">
               <p>
-                福君简介福君基因生物科技有限公司是西陇科学（股票代码：002584）的控股子公司，目前在中国有独立的第三方检测中心，实验室符合美国CLIA和CAP标准，拥有全球最先进的二代测序平台：Illumina
-                X 10以及Illumina Novaseq
+                福君基因生物科技有限公司是西陇科学（股票代码：002584）的控股子公司，目前在中国有独立的第三方检测中心，实验室符合美国CLIA和CAP标准，拥有全球先进的二代测序平台：Illumina
+                X 10以及Illumina Novaseq
                 6000；汇集大批业内高端人才，自主开发研究能力深厚，通过引进美国精准医疗与基因诊断行业的领军企业Fulgent
                 Genetics（Nasdaq:FLGT）先进的人工智能、
                 计算机科学、基因检测分析和遗传咨询技术，在出生缺陷预防、遗传病和罕见病方面的研究及产品开发走在世界前列，技术得到国际专家及权威机构认可，拥有与数百家国际知名医院、大规模人群的临床合作经验，可提供完善的数据分析和解读报告及全面的临床研究服务。
@@ -86,13 +86,13 @@
               <ul>
                 <li>
                   <span
-                    >在最权威的美国NIH基因检测数据库系统（GENETESTS）上，Fulgent
-                    Genetices为世界各地医疗机构提供最全面、数量最多的基因检测方案</span
+                    >在权威的美国NIH基因检测数据库系统（GENETESTS）上，Fulgent
+                    Genetices为世界各地医疗机构提供全面的基因检测方案</span
                   >
                 </li>
                 <li>
                   <span>
-                    全球最多应用前沿测序技术开展全面变异分析（包括CNV，SNV，InDel等）服务临床的企业，并提供专业遗传咨询服务
+                    应用前沿测序技术开展全面变异分析（包括CNV，SNV，InDel等）服务临床，并提供专业遗传咨询服务
                   </span>
                 </li>
                 <li>
@@ -227,17 +227,12 @@
                   </li>
                   <li>
                     <p>
-                      福君基因测序平台包括illumina公司最新推出的4台Nova-
-                      Seq6000、1台HiSeq X10、1台NextSeq 500、1台MiSeq，可提
-                      供多种测序读长、通量和时间周期选择，满足各类科研及应用对成
-                      本和速度的差异化需求。
+                      福君基因测序平台包括illumina公司新推出的4台Nova-Seq6000、1台HiSeq X10、1台NextSeq 500、1台MiSeq，可提供多种测序读长、通量和时间周期选择，满足各类科研及应用对成本和速度的差异化需求。
                     </p>
                   </li>
                   <li>
                     <p>
-                      福君目前在中国设有全球领先的基因组及大数据分析中心，拥有
-                      大型服务器和高性能计算机(HPC)，可以同时运行10T以上的高通量
-                      测序数据，有效支撑者生命科学研究和基因检测临床应用的发展。
+                      福君目前在中国设有全球领先的基因组及大数据分析中心，拥有大型服务器和高性能计算机(HPC)，可以同时运行10T以上的高通量测序数据，有效支撑着生命科学研究和基因检测临床应用的发展。
                     </p>
                   </li>
                 </ul>
@@ -304,10 +299,7 @@
                     2. 生物信息平台
                   </h3>
                   <p>
-                    由资深生物信息专家，率领并组建了一支具有计算机编程、统计建模和生物信息分析丰富经验的人才团
-                    队，并搭建了生物信息分析云平台系统和癌症、复杂疾病等生物信息数据库，可高效、准确地对测序和
-                    高通量筛选产生的海量数据进行深度挖掘。不仅拥有一套自主研发的国际领先水平的生物信息分析系统，
-                    并引进多个强大商业软件授权，如Novocraft、VarScan、Alumut等。
+                    由资深生物信息专家，率领并组建了一支具有计算机编程、统计建模和生物信息分析丰富经验的人才团队，并搭建了生物信息分析云平台系统和癌症、复杂疾病等生物信息数据库，可高效、准确地对测序和高通量筛选产生的海量数据进行深度挖掘。不仅拥有一套自主研发的国际领先水平的生物信息分析系统，并引进多个强大商业软件授权，如Novocraft、VarScan、Alumut等。
                   </p>
                 </li>
               </ul>
@@ -323,54 +315,35 @@
                 <li>
                   <h3 class="subtitle">1. 文库构建优势</h3>
                   <p>
-                    自主研发探针，及时补充新基因，检测基因数目多覆盖全，结果阳性率高。相比于无法自主研发探针的
-                    企业，我们能以最快的速度和较低的成本将最新发现的疾病相关基因补充到
-                    panel 中去，使检测产品覆 盖的基因数目更全。同时， panel
-                    不仅每个基因的全部外显子区，还覆盖了外显子侧翼区域(剪接位点)。这两个特点使得和同类疾病的基因检测产品相比，Fulgent
-                    的阳性率更高，结果更准确。
+                    自主研发探针，及时补充新基因，检测基因数目多覆盖全，结果阳性率高。相比于无法自主研发探针的企业，我们能以较快的速度和较低的成本将最新发现的疾病相关基因补充到panel中去，使检测产品覆盖的基因数目更全。同时，panel不仅每个基因的全部外显子区，还覆盖了外显子侧翼区域(剪接位点)。这两个特点使得和同类疾病的基因检测产品相比，Fulgent的阳性率更高，结果更准确。
                     <br />
                     <br />
-                    文库构建流程简单，样本初始量要求低。需50 ng
-                    高质量的起始DNA，使用转座法进行酶切和连接，大
-                    大简化文库构建流程和缩短时间。
+                    文库构建流程简单，样本初始量要求低。需50ng高质量的起始DNA，使用转座法进行酶切和连接，大大简化文库构建流程和缩短时间。
                     <br />
                     <br />
-                    目标区域覆盖率高。特异性的 panel
-                    是通过反复的设计和功能检验过程而制成的，以确保最高的性能和
-                    均一性，其结果是 panel 上 95%的区域至少以 20倍覆盖。
+                    目标区域覆盖率高。特异性的panel是通过反复的设计和功能检验过程而制成的，以确保高性能和均一性，其结果是panel上95%的区域至少以20倍覆盖。
                   </p>
                 </li>
                 <li>
                   <h3 class="subtitle">2. 生信分析优势</h3>
                   <p>
-                    严格的质控流程:采用 qualimap
-                    等专业软件对生信分析全流程进行严格质量把控;<br />
+                    严格的质控流程:采用qualimap等专业软件对生信分析全流程进行严格质量把控;<br />
                     高效的消除噪音:通过科学的算法有效去除干扰性变异信息，准确锁定变异目标;<br />
                     科学的变异分级:用人工智能系统对遗传变异进行分级，使解读更快速更准确;<br />
-                    全面的注释结果:自适应学习网络可自动整合全球资源，提供最新最全的数据注释;<br />
-                    更强的分析能力:首创专利算法，可分析 CNV
-                    等复杂变异，在业内独树一帜<br />
+                    全面的注释结果:自适应学习网络可自动整合全球资源，提供更新更全的数据注释;<br />
+                    更强的分析能力:首创专利算法，可分析CNV等复杂变异，在业内独树一帜<br />
                   </p>
                 </li>
                 <li>
                   <h3 class="subtitle">3. 数据解读优势</h3>
                   <p>
-                    福君基因的数据解读团队是由一支经验丰富的硕博队伍组成，严格按照美国医学遗传学与基因组学学会
-                    联合分子病理学会和美国病理学家协会与 2015
-                    年发布的《遗传变异分类标准与指南》中的变异分类标准，
-                    参考多个国际知名数据库(包括人口数据库、疾病特异性数据库、序列数据库)和最新研究成果，使用
-                    一系列生物信息分析工具进行致病证据的搜集，对待解读的基因变异进行致病证据的搜集，按照特定的
-                    规则，对变异的致病性作出分类。
+                    福君基因的数据解读团队是由一支经验丰富的硕博队伍组成，严格按照美国医学遗传学与基因组学学会联合分子病理学会和美国病理学家协会与2015年发布的《遗传变异分类标准与指南》中的变异分类标准，参考多个国际知名数据库(包括人口数据库、疾病特异性数据库、序列数据库)和新研究成果，使用一系列生物信息分析工具进行致病证据的搜集，对待解读的基因变异进行致病证据的搜集，按照特定的规则，对变异的致病性作出分类。
                   </p>
                 </li>
                 <li>
                   <h3 class="subtitle">4. 遗传咨询优势</h3>
                   <p>
-                    临床遗传咨询团队成员由具有遗传信息解读能力、临床和遗传学背景的遗传咨询师和分析解读人员组成。
-                    由 2
-                    位医学遗传学专家顾问，及若干遗传咨询师组成。他们为收到检测报告的客户提供一对一的遗传咨
-                    询服务，咨询内容包括:对报告中疑难结果进行解释分析;针对相关遗传病进行风险评估;为检测结果
-                    为高风险的咨询者提供下一步咨询指导;针对个人情况推荐权威专科专家进行下一步诊断或治疗。
+                    临床遗传咨询团队成员由具有遗传信息解读能力、临床和遗传学背景的遗传咨询师和分析解读人员组成。由2位医学遗传学专家顾问，及若干遗传咨询师组成。他们为收到检测报告的客户提供一对一的遗传咨询服务，咨询内容包括：对报告中疑难结果进行解释分析；针对相关遗传病进行风险评估；为检测结果为高风险的咨询者提供下一步咨询指导；针对个人情况推荐权威专科专家进行下一步诊断或治疗。
                   </p>
                 </li>
               </ul>
