--- a/joinus.html
+++ b/joinus.html
@@ -420,8 +420,7 @@
               <div class="duty">
                 <p class="title">岗位职责</p>
                 <p class="describe">
-                  ·
-                  推进业务发展，协助产品上市，与销售紧密合作，进行产品的销售推广；<br />
+                  · 推进业务发展，协助产品上市，与销售紧密合作，进行产品的销售推广；<br />
                   · 组织策划学术会议，交流和推广产品；<br />
                   · 科室会组织及主讲，交流和推广产品；<br />
                   · 市场调研分析，改进产品。<br />
